<resources>
    <string name="app_name" translatable="false">TextTsap</string>

    <string name="your_message">Message</string>
    <string name="send">Send</string>
    <string name="phone_number">Phone Number</string>
    <string name="app_not_installed">app not installed</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="whatsapp_business">Whatsapp Business</string>
    <string name="telegram">Telegram</string>
</resources>