<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_corner"
    tools:context=".ui.fragments.SelectAppSheetFragment">

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@color/grey_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginVertical="@dimen/_24sdp"
        android:gravity="start"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:id="@+id/whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:clickable="true"
            android:drawablePadding="@dimen/_8sdp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/whatsapp"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/whatsapp" />

        <TextView
            android:id="@+id/whatsapp_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:clickable="true"
            android:drawablePadding="@dimen/_8sdp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/whatsapp_business"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/whatsapp_business" />

        <TextView
            android:id="@+id/telegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:clickable="true"
            android:drawablePadding="@dimen/_8sdp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/telegram"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/telegram" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>